fix: stackoverflow chart normalization

--- a/node/source/less/module.less
+++ b/node/source/less/module.less
@@ -22,4 +22,10 @@
 }
 
 
+.module {
+  .toolbar {
+    margin-top: 20px;
+  }
+}
+
 
